<resources>
    <string name="app_name">K-Uber</string>


    <!-- Mainmenu -->
    <string name="home">Home</string>
    <string name="stock_button">Stock</string>
    <string name="recipes_button">Recipes</string>
    <string name="shopping_list_button">Shopping List</string>

    <!-- ErrorActivity -->
    <string name="errortitle">Error</string>
    <string name="error_title_placeholder">Error-Title-Placeholder</string>
    <string name="error_text_placeholder">Error-Text-Placeholder</string>

    <!-- SettingsActivity -->
    <string name="dark_bg">Dark background</string>
    <string name="settingstilte">Settings</string>
    <string name="save">Save</string>

    <!-- StockActivity -->
    <string name="stocktitle">Stock</string>
    <string name="add_button">Add</string>


    <!-- RecipesActivity -->
    <string name="recipestitle">Recipes</string>


    <!-- ItemActivity -->
    <string name="itemtitle">Add Item</string>
    <string name="item_name">Name</string>
    <string name="item_amount">Amount</string>
    <string name="item_save">Save</string>

    <!-- ShoppingActivity -->
    <string name="shoppingtitle">Shopping List</string>
    <string name="bought_btn">Bought</string>


    <!-- Recipes -->
    <string name="recipe_of_the_day">Recipe of the day</string>
    <string name="vegetarian_recipes_button">Vegetarian recipes</string>
    <string name="vegan_recipes_button">Vegan recipes</string>
    <string name="add">Add</string>
    <string name="add_int">Added ingredients to shopping list.</string>


    <string-array name="item_label">
        <item>g</item>
        <item>kg</item>
        <item>mL</item>
        <item>L</item>
        <item>pieces</item>
        <item>package</item>
        <item>portion</item>
    </string-array>

    <!-- Errors -->
    <string name="insert_error">Your Item could not be safed, please try again. If this coninues to fail, please conntact a developer</string>
    <string name="error_no_internet">You have no internet connection. Please, check your connection and try again.</string>
    <string name="error_no_filter">There was no filter set. Please contact the  developers.</string>
    <string name="error_no_recipe">Sorry, there where no recipes found. There might be some thing wrong with the database.</string>
    <string name="error_unit_fault">The ingrediets in the data base seem to be corrupted.</string>



</resources>
