<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/error_header_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/error_title_placeholder"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/error_info_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/error_info_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/error_text_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/error_home_btn_rl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_header_tv"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintVertical_weight="3" />

    <RelativeLayout
        android:id="@+id/error_home_btn_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_info_tv"
        app:layout_constraintVertical_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="navigateToMain"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/text_padding"
            android:text="@string/home"
            android:textStyle="bold" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>