<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_spacing"
        android:padding="@dimen/text_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/amount_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        app:layout_constraintEnd_toStartOf="@id/item_label_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/amount_et"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_amount" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/item_label_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:translationY="-6dp"
        app:layout_constraintBottom_toBottomOf="@id/amount_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/amount_til" />

    <Button
        android:layout_margin="20dp"
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/item_save"
        android:onClick="saveItem"
        app:layout_constraintTop_toBottomOf="@id/amount_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>